Bug 1369095 - calculate the size of the panel to be shown off-screen to work around all the panel layout issues. r=Paolo
MozReview-Commit-ID: ENxCccxcUZk

UltraBlame original commit: 9933f2d4d1885c5b730fb5d5a5103d77219be57d

--- a/browser/components/customizableui/content/panelUI.css
+++ b/browser/components/customizableui/content/panelUI.css
@@ -338,6 +338,53 @@ events
 none
 ;
 }
+.
+panel
+-
+viewcontainer
+.
+offscreen
+{
+position
+:
+absolute
+;
+top
+:
+100000px
+;
+left
+:
+100000px
+;
+}
+.
+panel
+-
+viewcontainer
+.
+offscreen
+.
+panel
+-
+viewcontainer
+.
+offscreen
+>
+.
+panel
+-
+viewstack
+{
+margin
+:
+0
+;
+padding
+:
+0
+;
+}
 /
 *
 END
